# copster

copster/: LICENSE.txt  README.md  pyproject.toml  requirements.txt
copster/src/copster/: __about__.py  __init__.py  __main__.py  check_step.py  emoji.py  step.py
copster/src/copster/action_steps/: format_step.py
copster/src/copster/check_steps/: check_format_step.py  mymy_check.py
copster/src/copster/cli/: __init__.py
copster/src/copster/cli/check_steps/: check_format_step.py
copster/tests/: __init__.py  test_math.py
old/: check_step.py  copster.py
old/check_steps/: check_format_step.py
x/: README.md
x/src/copster/: __main__.py
x/src/copster/cli/: __init__.py
