[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copster"
dynamic = ["version"]
description = 'One command for checking typing, formatting and style. An opinionated Python code compositor for seamless formatting and type-checking, uniting tools like ruff and mypy in a single command.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "theowiik", email = "theo.le.wiik@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "sh"
]

[project.urls]
Documentation = "https://github.com/theowiik/copster#readme"
Issues = "https://github.com/theowiik/copster/issues"
Source = "https://github.com/theowiik/copster"

[project.scripts]
copster = "copster.cli:copster"

[tool.hatch.version]
path = "src/copster/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/copster tests}"

[tool.coverage.run]
source_pkgs = ["copster", "tests"]
branch = true
parallel = true
omit = [
  "src/copster/__about__.py",
]

[tool.coverage.paths]
copster = ["src/copster", "*/copster/src/copster"]
tests = ["tests", "*/copster/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
