[project]
name = "copster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "theowiik", email = "theo.le.wiik@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
copster = "copster:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
